@@ -10,6 +10,8 @@ Version: 0.1.3
     - Fix ']' inside block strings disappearing
     - Fix `(foo..bar)..baz` performing `bar..baz` first. Only matters when using __concat
     - Fix parenthesis inside of concat chains not being representable inside the AST (data loss)
+    - Fix the condition for repeatstat resolving references starting at the parent scope
+      for example the condition in `repeat local foo; until foo` would index into `_ENV`
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2022-01-29
